<resources>
    <string name="app_name">MovieApp</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="about_movie">About Movie</string>
    <string name="favorites">Favorites</string>
    <string name="unknown">Unknown</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_password_empty">Email and Password cannot be empty</string>
    <string name="no_account">Don’t have an account? </string>
    <string name="signup">Signup</string>
    <string name="search_movie">Search Movie</string>
    <string name="error_loading_movies">Error loading popular movies</string>
    <string name="error">Error</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="confirm_password_empty">Confirm Password cannot be empty</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="already_have_account">Already have an account! </string>
    <string name="watchlist">Watchlist</string>
    <string name="logout">Log out</string>
    <string name="languages">Languages:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="login_error">Email or Password is incorrect</string>
    <string name="email_not_verified">Your email address is not verified. Please verify your email.</string>
    <string name="sign_in_successful">Sign In Successful!</string>
    <string name="email_verification_error">Unable to check email verification status. Please try again.</string>
    <string name="register_successful">Register Successful!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="comedy">Comedy</string>
    <string name="home">Home</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>

    <!-- Genre Strings -->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>

</resources>